--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -13,6 +13,12 @@ a {
   cursor: pointer;
 }
 
+.skeleton {
+  padding: 10px;
+  margin: 0 auto;
+}
+
+
 main {
   margin: 0 auto;
   max-width: 960px;
