--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -69,6 +69,9 @@ header nav {
     color: #fff;
 
   }
+  nav  {
+      font-size: small;
+  }
   
 }
 
@@ -122,6 +125,11 @@ button {
   border-radius: 5px;
   padding: 7px 0;
   cursor: pointer;
+}
+button:hover {
+  background-color: white;
+  color: #555;
+  border: 2px solid #555;
 }
 
 form.login .register h1 {
