--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -34,7 +34,16 @@ header {
 }
 header a {
   text-decoration: none;
-  color: inherit;
+  /* color: inherit; */
+    padding: 10px 30px;
+    background-color: #333;
+    border-radius: 20px;
+    color: #fff;
+}
+header a:hover {
+  background-color: white;
+  color: #333;
+  border: 2px solid #333;
 }
 
 header a.logo {
@@ -47,6 +56,7 @@ header a.logo {
 
 header nav {
   display: flex;
+  flex-direction: column;
   gap: 15px;
 }
 
@@ -67,10 +77,9 @@ header nav {
     background-color: #333;
     border-radius: 20px;
     color: #fff;
-
   }
-  nav  {
-      font-size: small;
+  header nav {
+    flex-direction: row;
   }
   
 }
